--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ bld/
 .vscode/
 .gitattributes
 .gitignore
-.vscode/settings.json
+.vscode/launch.json
 
 # Visual Studio 2015 cache/options directory
 .vs/
